--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ external_link:
   exclude:
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -164,8 +164,8 @@ douban:
   user: iamjerryc
   builtin: false
   movie:
-    title: '那些年,我看過的電影'
-    quote: '過去、現在、未來'
+    title: '那些年, 我追过的电影'
+    quote: '过去、现在、未来'
     comments: false
     top_img: https://cdn.jsdelivr.net/gh/jerryc127/butterfly_cdn@2.1.0/top_img/movie.jpg
     meta: true
