--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -8,29 +8,65 @@
 #       descr: 博客描述
 # 5. 發起 Pull requests ，合併到 butterfly.js.org 倉庫
 
-- class_name: '<i class="fas fa-check-double" style="color: #FF6666;padding-right: 0.4rem"></i>網站'
+- class_name: '<i class="fas fa-check-double" style="color: #FF6666;padding-right: 0.4rem"></i>个人其他网站'
   class_desc: '<span style="font-style: italic;">重要的事情説一遍</span>'
   link_list:
     - name: MYW
       link: https://immyw.com/
       avatar: https://immyw.com/img/avatar.png
-      descr: 今日事,今日畢
+      descr: 今日事,今日毕
     - name: Hexo
       link: https://hexo.io/zh-tw/
       avatar: https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg
-      descr: 快速、簡單且強大的網誌框架
+      descr: 快速、简单且强大的博客框架
     - name: Butterfly
       link: https://github.com/jerryc127/hexo-theme-butterfly
       avatar: https://cdn.jsdelivr.net/gh/jerryc127/CDN/img/butterfly-github-avatar.png
       descr: '🦋 A Hexo Theme: Butterfly'
 
-- class_name: '<i class="fas fa-fan" style="color:#00cccc;padding-right: 0.4rem"></i>示例'
-  class_desc: '<span style="font-style: italic;">最可愛的朋友在這裏</span>'
+- class_name: '<i class="fas fa-fan" style="color:#00cccc;padding-right: 0.4rem"></i>友情链接'
+  class_desc: '<span style="font-style: italic;">最可爱的朋友在这儿</span>'
   link_list:
-    - name: 更多示例
-      link: https://github.com/jerryc127/hexo-theme-butterfly/issues/76
-      avatar: https://cdn.jsdelivr.net/gh/jerryc127/CDN/img/more-butterfly-demo-avatar.png
-      descr: 更多使用 Butterfly 的網站
+    - name: 码酱
+      link: http://luokangyuan.com
+      avatar: http://image.luokangyuan.com/1_qq_27922023.jpg
+      descr: 我不是大佬，只是在追寻大佬的脚步
+    - name: 苏剑林
+      link: https://kexue.fm
+      avatar: https://kexue.fm/usr/themes/geekg/images/avatar.png
+      descr: 科学空间博主，数学、天文、理论物理、写作、阅读、计算机、中国象棋、厨房爱好者..
+    - name: 崔庆才
+      link: https://cuiqingcai.com
+      avatar: https://cuiqingcai.com/images/avatar.png
+      descr: 崔庆才的个人站点，记录生活的瞬间，分享学习的心得。
+    - name: 彭知了
+      link: https://gitee.com/pengzhile/ide-eval-resetter
+      avatar: https://avatars.githubusercontent.com/u/343491?v=4
+      descr: 精通破解软件的知了大佬，DBeaver、jetbrains全家桶破解！
+    - name: A2Data
+      link: https://www.a2data.cn
+      avatar: https://statics.sh1a.qingstor.com/2019/06/01/24logo.png
+      descr: 武术跨行大数据，用技术推动梦想的落地！
+    - name: Five-great
+      link: http://www.fivecc.cn
+      avatar: https://statics.sh1a.qingstor.com/2019/06/01/avatar3.jpeg
+      descr: 有事多研究，没事瞎琢磨。
+    - name: Sitoi
+      link: https://sitoi.cn
+      avatar: https://statics.sh1a.qingstor.com/2019/06/01/avatar5.png
+      descr: 妄想通过成为 Spider-Man 来实现财富自由的程序猿
+    - name: 过客~励む
+      link: https://yafine-blog.cn
+      avatar: https://statics.sh1a.qingstor.com/2019/06/01/avatar.jpg
+      descr: 你现在的努力，是为了以后有更多的选择。
+    - name: 洪卫の博客
+      link: https://sunhwee.com
+      avatar: https://statics.sh1a.qingstor.com/2019/06/01/avatar2.png
+      descr: 凭寄狂夫书一纸，信在成都万里桥。
+    - name: 码农
+      link: https://www.90c.vip
+      avatar: https://statics.sh1a.qingstor.com/2019/06/01/coder.png
+      descr: 这里不隐含扭曲的价值观，而是整合并充盈正能量
     - name: Serok's Blog
       link: https://akioi.eu.org/
       avatar: https://cdn.jsdelivr.net/gh/SerokSSR/cdn2/k16.png
@@ -134,11 +170,7 @@
     - name: 冻符「Minus-K」
       link: https://www.kawashiros.club/
       avatar: https://www.kawashiros.club/resources/avatar.webp
-      descr: (S)He Has Gone. 
-    - name: Eurkon
-      link: https://blog.eurkon.com
-      avatar: https://blog.eurkon.com/images/user/avatar.jpg
-      descr: 不只是代码的搬运工
+      descr: (S)He Has Gone.
     - name: 贰猹的小窝
       link: https://noionion.top/
       avatar: https://pub-noionion.oss-cn-hangzhou.aliyuncs.com/head.jpg
