--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -11,14 +11,14 @@
 - class_name: '<i class="fas fa-check-double" style="color: #FF6666;padding-right: 0.4rem"></i>个人其他网站'
   class_desc: '<span style="font-style: italic;">重要的事情説一遍</span>'
   link_list:
-    - name: MYW
-      link: https://immyw.com/
+    - name: WiseQuotes
+      link: https://www.songzhijun.com/wisequotes/
       avatar: https://immyw.com/img/avatar.png
-      descr: 今日事,今日毕
+      descr: 智慧格言
     - name: Hexo
-      link: https://hexo.io/zh-tw/
-      avatar: https://d33wubrfki0l68.cloudfront.net/6657ba50e702d84afb32fe846bed54fba1a77add/827ae/logo.svg
-      descr: 快速、简单且强大的博客框架
+      link: https://www.songzhijun.com/dashio/
+      avatar: https://www.songzhijun.com/dashio/img/ui-sam.jpg
+      descr: 一个展示dash图表的网页模板
     - name: Butterfly
       link: https://github.com/jerryc127/hexo-theme-butterfly
       avatar: https://cdn.jsdelivr.net/gh/jerryc127/CDN/img/butterfly-github-avatar.png
