--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -855,7 +855,7 @@ lazyload:
   enable: true
   field: site # site/post
   placeholder: /img/loading.gif
-  blur: false
+  blur: true
 
 # PWA
 # See https://github.com/JLHwung/hexo-offline
