--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -79,7 +79,7 @@
       link: https://aymetic.com
       avatar: https://cdn.jsdelivr.net/gh/Aymetic/site-source/img/avatar.jpg
       descr: 从兴趣出发
-    - name: 张和
+    - name: 张洪Heo
       link: https://blog.zhheo.com/
       avatar: https://blog.zhheo.com/img/avatar.png
       descr: 爱折腾的设计师
