--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -675,7 +675,7 @@ preloader: true
 # aside (側邊欄)
 aside:
   enable: true
-  hide: true
+  hide: fasle
   button: true
   mobile: true # display on mobile
   position: right # left or right
