--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -883,7 +883,9 @@ css_prefix: true
 inject:
   head:
     - '<style type="text/css">.card-announcement .social-button{margin: .6rem 0 0 0; text-align: center;}.card-announcement .social-button a{display: block; margin: 0.2rem 0;background-color: var(--btn-bg); color: var(--btn-color); line-height: 1.6rem; transition: all .3s; position: relative; z-index: 1;}</style>'
+    - '<script data-ad-client="ca-pub-1902923403139213" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>'
   bottom:
+    - '<script data-ad-client="ca-pub-1902923403139213" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>'
 
 # CDN
 # Don't modify the following settings unless you know how they work
