--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-imagemin": "^7.1.0",
     "hexo": "^5.4.0",
     "hexo-abbrlink": "^2.2.1",
+    "hexo-algolia": "^1.3.2",
     "hexo-butterfly-artitalk": "^1.0.3",
     "hexo-butterfly-douban": "^1.2.4",
     "hexo-deployer-git": "^3.0.0",
