--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -855,7 +855,7 @@ pangu:
 # Lazyload (圖片懶加載)
 # https://github.com/verlok/vanilla-lazyload
 lazyload:
-  enable: true
+  enable: false
   field: site # site/post
   placeholder: /img/loading.gif
   blur: true
