--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,8 @@ skip_render:
   - boxify/*
   - boxify/**
   - boxify/***
+  - navigate2/*
+  - navigate2/**
   - navigate/*
   - navigate/**
   - navigate/***
@@ -137,8 +139,10 @@ theme: butterfly
 deploy:
   type: git
   repo:
-    - https://github.com/szj2ys/szj2ys.github.io.git
+    github: https://github.com/szj2ys/szj2ys.github.io.git
 #    - https://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@github.com/iszj/iszj.github.io.git
+#    gitee: xxx
+#     coding: xxx
   branch: master
   # other deployer
 
