--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: 在下小宋
 subtitle: Never settle!
 description: 从来没有真正的绝境，只有心灵的迷途
 keywords: hexo,butterfly,demo,hexo-butterfly,hexo-theme-butterfly
-author: 宋志军
+author: 在下小宋
 language: zh-CN
 timezone: Asia/Hong_Kong
 
