--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -672,7 +672,8 @@ subtitle:
   # 如果關閉打字效果，subtitle只會顯示sub的第一行文字
   sub:
     - 从来没有真正的绝境&#44;只有心灵的迷途
-    - Never put off till tomorrow what you can do today
+    - "一点浩然气，千里快哉风"
+    - "留得青山在，不怕没柴烧"
 
 # Loading Animation (加載動畫)
 preloader: true
