--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -674,6 +674,8 @@ subtitle:
     - 从来没有真正的绝境&#44;只有心灵的迷途
     - "一点浩然气，千里快哉风"
     - "留得青山在，不怕没柴烧"
+    - "知人者智，自知者明"
+    - "德川家康家训：一、人之一生，如负重远行，不可急于求成。二、以受约束为常事，则不会心生不满。三、常思贫困，方无贪欲之念。四、忍耐乃长久无事之基石。五、愤怒是敌。六、只知胜而不知败，必害其身。七、常思己过，莫论人非。八、不及尚能补，过之无以救。"
 
 # Loading Animation (加載動畫)
 preloader: true
