--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -671,11 +671,17 @@ subtitle:
   # 開頭不允許轉義字元，如需要，請把整個句子用雙引號包住
   # 如果關閉打字效果，subtitle只會顯示sub的第一行文字
   sub:
-    - 从来没有真正的绝境&#44;只有心灵的迷途
+    - "天之道，损有余而补不足；人之道，则不然，损不足以奉有余"
     - "一点浩然气，千里快哉风"
     - "留得青山在，不怕没柴烧"
-    - "知人者智，自知者明"
+    - "反听之谓聪，内视之谓明，自胜之谓强"
     - "德川家康家训：一、人之一生，如负重远行，不可急于求成。二、以受约束为常事，则不会心生不满。三、常思贫困，方无贪欲之念。四、忍耐乃长久无事之基石。五、愤怒是敌。六、只知胜而不知败，必害其身。七、常思己过，莫论人非。八、不及尚能补，过之无以救。"
+    - "顺，不妄喜；逆，不惶馁；安，不奢逸；危，不惊惧；胸有惊雷而面如平湖者，可拜上将军也"
+    - "祸不妄至，福不徒来"
+    - "力田不如逢年，善仕不如遇合"
+    - "知其不可奈何而安之若命，德之至也"
+    - "智足以拒谏，言足以饰非"
+    - "千金之裘，非一狐之腋也；台榭之榱，非一木之枝也；三代之际，非一代之智也"
 
 # Loading Animation (加載動畫)
 preloader: true
